Changelog
=========

4.6-dev - (unreleased)
----------------------

4.5 - (2012-03-30)
------------------
 * i18n: Added i18n locales folder, pot files and po files for en and ro
   [voineali]
 * Change: Update popup look&feel
   [voineali #4968]
 * Change: remove left and right column for portal_relations admin page
   [demarant]
 * Feature: possibility to overwrite default thumb scale when show relations
   [demarant]
 * Bug fix: Fixed view macro under eeareferencebrowser.pt
   [ghicaale #4998]
 * Change: removed content creation status message in reference popup
   [tiberich #4982]

4.4 - (2012-03-05)
------------------
 * Bug fix: Renamed css file to css.dtml. Use portal_url to anchor images
   [tiberich #4956]
 * Change: make the @eea.relations.macros generic
   [tiberich #4982]

4.3 - (2012-02-15)
------------------
 * Bug fix: don't check for thumbs on content types, we always have them
   [tiberich #4671]

4.2 - (2012-01-03)
------------------
* Bug fix: Fixed permission for related items
  [voineali #4841]
* Bug fix: Fixed icons for items in portal_relations tool
  [voineali #4834]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Feature: added a way to easily override Plone default ATContentTypes
  widget for relatedItems field. Just add 'eea.relations.default' within your
  zc.buildout include ZCMLs
  [voineali #4232]
* Cleanup: fixed all pylint, pyflakes violations
  [voineali #4232]
* Feature: added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [voineali #4232]

0.10 - (2011-03-29)
-------------------
* Bug fix: fixed failure if object has no workflow
  [voineali #4217]

0.9 - (2011-02-18)
------------------
* Changed: replaced thickbox with fancybox
  [ichimdav #3773]

0.8 - (2010-12-13)
------------------
* Bug fix: fixed jslint warnings
  [voineali #3821]

0.7 - (2010-11-22)
------------------
* Bug fix: fixed missing end tag found by hudson zptlint
  [voineali #3821]